SASS refactor of the filter bar on the search results pages. - Added a wrapper class (.filter-item-wrap) around each form element to ensure that padding remains consistent. - Moved mixin/elements sass files from the “location” filter folder to the global mixin/element folder. - Fixed the design of the error messages. - Added some additional style to the selected filters buttons.

--- a/src/_scss/elements/filters/_typeahead.scss
+++ b/src/_scss/elements/filters/_typeahead.scss
@@ -1,41 +1,35 @@
 .usa-da-typeahead {
-    margin-top: 2rem;
-
     p {
         color: $color-gray;
         font-size: $small-font-size;
         margin-top: 0;
         margin-bottom: .5rem;
     }
-
     input {
         font-size: $small-font-size;
-        height: 4rem;
+        height: rem(40);
         margin: 0 auto;
-        padding:  11px 8px 11px 8px;
-        width: 90%;
+        padding: 11px 8px 11px 8px;
+        width: 100%;
     }
-
     .autocomplete ul {
         background-color: $color-white;
         border: 1px solid $color-gray-lighter;
         cursor: default;
         list-style-type: none;
+        margin: 0;
         padding: 0;
-        width: 90%;
-
         li {
-            line-height: 2rem;
+            line-height: rem(20);
             font-size: $small-font-size;
             font-weight: normal;
-            padding: 1rem 2rem;
-            color: #555555;
+            padding: rem(10) rem(20);
+            color: $color-base;
             border-bottom: 1px solid $color-gray-lighter;
             margin-bottom: 0;
             width: 100%;
             vertical-align: middle;
             word-wrap: break-word;
-
             &:hover,
             &.hover,
             &[aria-selected="true"] {
@@ -50,11 +44,8 @@
                     color: $color-gray;
                 }
             }
-
-
         }
     }
-
     .hide {
         display: none;
     }
